Profile UI change and Sidebar overflow issue fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,3 +36,13 @@
         opacity: 1;
     }
 }
+
+.box {
+    --mask:
+        radial-gradient(33.54px at 50% 45px, #000 99%, #0000 101%) calc(50% - 30px) 0/60px 51% repeat-x,
+        radial-gradient(33.54px at 50% -30px, #0000 99%, #000 101%) 50% 15px/60px calc(51% - 15px) repeat-x,
+        radial-gradient(33.54px at 50% calc(100% - 45px), #000 99%, #0000 101%) calc(50% - 30px) 100%/60px 51% repeat-x,
+        radial-gradient(33.54px at 50% calc(100% + 30px), #0000 99%, #000 101%) 50% calc(100% - 15px)/60px calc(51% - 15px) repeat-x;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
+}
